--- a/index.html
+++ b/index.html
@@ -364,6 +364,62 @@
       display: block;
       margin-bottom: 40px;
     }
+    /* --- Contact form (bottom) --- */
+.contact-section {
+  padding: 4rem 2rem;
+  max-width: 1200px;
+  margin: 0 auto 2rem auto;
+}
+.contact-section h2 {
+  font-family: 'Playfair Display', serif;
+  color: #004080;
+  font-size: 2rem;
+  margin-bottom: 1rem;
+  text-align: left;
+}
+.contact-intro {
+  color: #333;
+  margin-bottom: 1.5rem;
+}
+.contact-form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1rem 1.25rem;
+}
+.contact-form .full { grid-column: 1 / -1; }
+.contact-form label {
+  display: block;
+  font-size: 0.9rem;
+  font-weight: 600;
+  margin-bottom: 0.35rem;
+  color: #222;
+}
+.contact-form input,
+.contact-form select,
+.contact-form textarea {
+  width: 100%;
+  padding: 0.75rem 0.9rem;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  font: inherit;
+  background: #fff;
+}
+.contact-form textarea { min-height: 140px; resize: vertical; }
+.contact-actions { display: flex; gap: 0.75rem; }
+.contact-submit {
+  padding: 0.85rem 1.25rem;
+  background: #008080;
+  color: #fff;
+  border: 0;
+  border-radius: 8px;
+  cursor: pointer;
+  font-weight: 600;
+}
+.contact-submit:hover { filter: brightness(0.95); }
+@media (max-width: 800px) {
+  .contact-form { grid-template-columns: 1fr; }
+}
+
   </style>
 </head>
 <body>
@@ -453,7 +509,59 @@
   <source src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/video/Aeroplane_Flies_Over_States_Drops_Markers.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
-  </div>
+   </div>
+</section>
+<!-- Contact / Request a Proposal -->
+<section class="contact-section" id="contact">
+
+  <h2>Request a Proposal</h2>
+  <p class="contact-intro">Tell us a bit about your project and the service you need. We’ll get back to you promptly.</p>
+
+  <form class="contact-form" action="#" method="post">
+    <div>
+      <label for="name">Name</label>
+      <input id="name" name="name" type="text" autocomplete="name" required>
+    </div>
+
+    <div>
+      <label for="email">Email Address</label>
+      <input id="email" name="email" type="email" autocomplete="email" required>
+    </div>
+
+    <div>
+      <label for="phone">Phone Number</label>
+      <input id="phone" name="phone" type="tel" inputmode="tel" autocomplete="tel">
+    </div>
+
+    <div>
+      <label for="service">Service Needed</label>
+      <select id="service" name="service" required>
+        <option value="" disabled selected>Select a service</option>
+        <option>Structural Analysis and Design</option>
+        <option>Restoration and Rehabilitation</option>
+        <option>Forensic Engineering / Expert Reports</option>
+        <option>Inspection and Compliance</option>
+        <option>Structural Construction Administration</option>
+        <option>Facade Assessment & Repair</option>
+        <option>Moisture Intrusion / Envelope Diagnostics</option>
+        <option>Roofing & Flashing Assessment</option>
+        <option>Building Envelope Design Detailing</option>
+        <option>Envelope Construction Administration</option>
+        <option>Discipline Specific CAD Support</option>
+        <option>Subscription Based Structural Support</option>
+        <option>Other / Additional Services</option>
+      </select>
+    </div>
+
+    <div class="full">
+      <label for="message">Message</label>
+      <textarea id="message" name="message" placeholder="Share key details: building type, location, timeline, and goals." required></textarea>
+    </div>
+
+    <div class="full contact-actions">
+      <button type="submit" class="contact-submit">Send Request</button>
+    </div>
+  </form>
 </section>
 <!-- Page blur overlay for services hover -->
 <div id="blur-overlay"></div>
