--- a/index.html
+++ b/index.html
@@ -369,6 +369,9 @@
   padding: 4rem 2rem;
   max-width: 1200px;
   margin: 0 auto 2rem auto;
+  background-color: #f0f0f0; /* light gray background */
+  border: 2px solid #ccc;     /* border around the section */
+  border-radius: 8px;         /* optional: rounded corners */
 }
 .contact-section h2 {
   font-family: 'Playfair Display', serif;
