--- a/index.html
+++ b/index.html
@@ -422,36 +422,6 @@
 @media (max-width: 800px) {
   .contact-form { grid-template-columns: 1fr; }
 }
-/* Full-bleed video wrapper for the contact section */
-.contact-video {
-  position: relative;
-  margin-left: calc(50% - 50vw);
-  margin-right: calc(50% - 50vw);
-  overflow: hidden; /* hide any tiny gutters */
-}
-
-/* Background video fills the wrapper */
-.contact-video .contact-bg-video {
-  position: absolute;
-  inset: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  display: block;
-  z-index: 0;
-}
-
-/* Keep the form fully opaque and above the video */
-.contact-section {
-  position: relative;   /* sits above the video */
-  z-index: 1;
-  background-color: #f0f0f0;  /* already set – ensures not transparent */
-  border: 2px solid #ccc;
-  border-radius: 8px;
-  padding: 4rem 2rem;
-  max-width: 1200px;
-  margin: 0 auto 2rem auto;
-}
 
   </style>
 </head>
@@ -545,66 +515,57 @@
    </div>
 </section>
 <!-- Contact / Request a Proposal -->
-<!-- Contact / Request a Proposal with full-bleed background video -->
-<section class="contact-video">
-  <video class="contact-bg-video" autoplay muted loop playsinline preload="auto">
-    <!-- Use the RAW GitHub URL so the video actually streams -->
-    <source src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/video/White_Wall_Collapses_in_Rain.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
+<section class="contact-section" id="contact">
 
-  <section class="contact-section" id="contact">
-    <h2>Request a Proposal</h2>
-    <p class="contact-intro">Tell us a bit about your project and the service you need. We’ll get back to you promptly.</p>
+  <h2>Request a Proposal</h2>
+  <p class="contact-intro">Tell us a bit about your project and the service you need. We’ll get back to you promptly.</p>
 
-    <form class="contact-form" action="#" method="post">
-      <div>
-        <label for="name">Name</label>
-        <input id="name" name="name" type="text" autocomplete="name" required>
-      </div>
+  <form class="contact-form" action="#" method="post">
+    <div>
+      <label for="name">Name</label>
+      <input id="name" name="name" type="text" autocomplete="name" required>
+    </div>
 
-      <div>
-        <label for="email">Email Address</label>
-        <input id="email" name="email" type="email" autocomplete="email" required>
-      </div>
+    <div>
+      <label for="email">Email Address</label>
+      <input id="email" name="email" type="email" autocomplete="email" required>
+    </div>
 
-      <div>
-        <label for="phone">Phone Number</label>
-        <input id="phone" name="phone" type="tel" inputmode="tel" autocomplete="tel">
-      </div>
+    <div>
+      <label for="phone">Phone Number</label>
+      <input id="phone" name="phone" type="tel" inputmode="tel" autocomplete="tel">
+    </div>
 
-      <div>
-        <label for="service">Service Needed</label>
-        <select id="service" name="service" required>
-          <option value="" disabled selected>Select a service</option>
-          <option>Structural Analysis and Design</option>
-          <option>Restoration and Rehabilitation</option>
-          <option>Forensic Engineering / Expert Reports</option>
-          <option>Inspection and Compliance</option>
-          <option>Structural Construction Administration</option>
-          <option>Facade Assessment & Repair</option>
-          <option>Moisture Intrusion / Envelope Diagnostics</option>
-          <option>Roofing & Flashing Assessment</option>
-          <option>Building Envelope Design Detailing</option>
-          <option>Envelope Construction Administration</option>
-          <option>Discipline Specific CAD Support</option>
-          <option>Subscription Based Structural Support</option>
-          <option>Other / Additional Services</option>
-        </select>
-      </div>
+    <div>
+      <label for="service">Service Needed</label>
+      <select id="service" name="service" required>
+        <option value="" disabled selected>Select a service</option>
+        <option>Structural Analysis and Design</option>
+        <option>Restoration and Rehabilitation</option>
+        <option>Forensic Engineering / Expert Reports</option>
+        <option>Inspection and Compliance</option>
+        <option>Structural Construction Administration</option>
+        <option>Facade Assessment & Repair</option>
+        <option>Moisture Intrusion / Envelope Diagnostics</option>
+        <option>Roofing & Flashing Assessment</option>
+        <option>Building Envelope Design Detailing</option>
+        <option>Envelope Construction Administration</option>
+        <option>Discipline Specific CAD Support</option>
+        <option>Subscription Based Structural Support</option>
+        <option>Other / Additional Services</option>
+      </select>
+    </div>
 
-      <div class="full">
-        <label for="message">Message</label>
-        <textarea id="message" name="message" placeholder="Share key details: building type, location, timeline, and goals." required></textarea>
-      </div>
+    <div class="full">
+      <label for="message">Message</label>
+      <textarea id="message" name="message" placeholder="Share key details: building type, location, timeline, and goals." required></textarea>
+    </div>
 
-      <div class="full contact-actions">
-        <button type="submit" class="contact-submit">Send Request</button>
-      </div>
-    </form>
-  </section>
+    <div class="full contact-actions">
+      <button type="submit" class="contact-submit">Send Request</button>
+    </div>
+  </form>
 </section>
-
 <!-- Page blur overlay for services hover -->
 <div id="blur-overlay"></div>
 
@@ -679,10 +640,10 @@ document.addEventListener('DOMContentLoaded', () => {
     // Build dropdown
     const drop = document.createElement('div');
     drop.className = 'service-drop';
-    drop.innerHTML = `
+    drop.innerHTML = 
       <h4>${title}</h4>
-      <ul>${items.map(i => `<li>${i}</li>`).join('')}</ul>
-    `;
+      <ul>${items.map(i => <li>${i}</li>).join('')}</ul>
+    ;
     card.appendChild(drop);
 
     // Blur overlay toggle on hover/focus
