--- a/index.html
+++ b/index.html
@@ -481,25 +481,128 @@
     </div>
   </section>
 
-  <!-- Services Section -->
-  <section class="features" id="services">
-    <h2 style="text-align: center">Our Services</h2>
-    <div class="services-grid">
-      <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Structural%20engineering%20services.png"><div class="service-description"><h3>Structural Analysis and Design</h3><p>Safe, code-compliant structural systems designed for new buildings or for strengthening existing ones.</p></div></div>
-      <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Building%20envelope.png"><div class="service-description"><h3>Restoration and Rehabilitation Services</h3><p>Aged, damaged, or deteriorated buildings are evaluated and restored to ensure long-term safety and performance.</p></div></div>
-      <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Special%20inspections.png"><div class="service-description"><h3>Forensic Engineering and Expert Reports</h3><p>Root causes of structurak failures are uncovered and documented for insurance, legal, and technical purposes.</p></div></div>
-      <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/MEP.png"><div class="service-description"><h3>Inspection and Compliance Services</h3><p>Critical inspections and evaluations are conducted to confirm structural integrity and building code compliance.</p></div></div>
-      <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Civil%20engineering.png"><div class="service-description"><h3>Structural Construction Administration</h3><p>Project execution is supported through submittal reviews, construction coordination, and field quality checks.</p></div></div>
-      <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Building%20envelope.png"><div class="service-description"><h3>Building Facade Assessment and Repair Services</h3><p>Exterior walls and façade systems are assessed and repairs are recommended.</p></div></div>
-      <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Special%20inspections.png"><div class="service-description"><h3>Moisture Intrusion and Envelope Diagnostics</h3><p>Moisture intrusion path is detected using testing methods.</p></div></div>
-      <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Structural%20engineering%20services.png"><div class="service-description"><h3>Roofing and Flashing assessment Services</h3><p>Roof conditions are evaluated and repair recommendations are provided to ensure protection from weather.</p></div></div>
-      <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/MEP.png"><div class="service-description"><h3>Building Envelope Design Detailing</h3><p>Highly detailed CAD drawings illustrate key components of the exterior envelope for accurate repair or new construction.</p></div></div>
-      <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Civil%20engineering.png"><div class="service-description"><h3>Envelope Construction Administration</h3><p>Façade and roof repair projects are overseen to maintain quality, schedule, and material compliance.</p></div></div>
-      <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Structural%20engineering%20services.png"><div class="service-description"><h3>Discipline Specific CAD Support</h3><p>Professionally drafted technical drawings support all trades—structure, architecture, MEP, electrical, plumbing, and Structural.</p></div></div>
-      <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Special%20inspections.png"><div class="service-description"><h3>Subscription Based Structural Support</h3><p>Ongoing structural consultation and document support provided through an affordable, monthly plan.</p></div></div>
-      <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Building%20envelope.png"><div class="service-description"><h3>Additional Services</h3><p>Covers a wide range of construction-related support beyond the listed categories—tailored solutions for unique project needs.</p></div></div>
+<!-- Services Section -->
+<section class="features" id="services">
+  <h2 style="text-align: center">Our Services</h2>
+  <div class="services-grid">
+    <!-- Structural Analysis and Design -->
+    <div class="service-item">
+      <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Steel%20Structure.png" alt="Structural Analysis and Design">
+      <div class="service-description">
+        <h3>Structural Analysis and Design</h3>
+        <p>Safe, code-compliant structural systems designed for new buildings or for strengthening existing ones.</p>
+      </div>
     </div>
-  </section>
+
+    <!-- Restoration and Rehabilitation Services -->
+    <div class="service-item">
+      <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Historic%20structure.png" alt="Restoration and Rehabilitation Services">
+      <div class="service-description">
+        <h3>Restoration and Rehabilitation Services</h3>
+        <p>Aged, damaged, or deteriorated buildings are evaluated and restored to ensure long-term safety and performance.</p>
+      </div>
+    </div>
+
+    <!-- Forensic Engineering and Expert Reports -->
+    <div class="service-item">
+      <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Forensic%20analysis.png" alt="Forensic Engineering and Expert Reports">
+      <div class="service-description">
+        <h3>Forensic Engineering and Expert Reports</h3>
+        <p>Root causes of structurak failures are uncovered and documented for insurance, legal, and technical purposes.</p>
+      </div>
+    </div>
+
+    <!-- Inspection and Compliance Services (unchanged) -->
+    <div class="service-item">
+      <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/MEP.png" alt="Inspection and Compliance Services">
+      <div class="service-description">
+        <h3>Inspection and Compliance Services</h3>
+        <p>Critical inspections and evaluations are conducted to confirm structural integrity and building code compliance.</p>
+      </div>
+    </div>
+
+    <!-- Structural Construction Administration (unchanged) -->
+    <div class="service-item">
+      <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Civil%20engineering.png" alt="Structural Construction Administration">
+      <div class="service-description">
+        <h3>Structural Construction Administration</h3>
+        <p>Project execution is supported through submittal reviews, construction coordination, and field quality checks.</p>
+      </div>
+    </div>
+
+    <!-- Building Facade Assessment and Repair Services (unchanged) -->
+    <div class="service-item">
+      <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Building%20envelope.png" alt="Building Facade Assessment and Repair Services">
+      <div class="service-description">
+        <h3>Building Facade Assessment and Repair Services</h3>
+        <p>Exterior walls and façade systems are assessed and repairs are recommended.</p>
+      </div>
+    </div>
+
+    <!-- Moisture Intrusion and Envelope Diagnostics -->
+    <div class="service-item">
+      <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Moisture%20intrusion.png" alt="Moisture Intrusion and Envelope Diagnostics">
+      <div class="service-description">
+        <h3>Moisture Intrusion and Envelope Diagnostics</h3>
+        <p>Moisture intrusion path is detected using testing methods.</p>
+      </div>
+    </div>
+
+    <!-- Roofing and Flashing assessment Services (unchanged) -->
+    <div class="service-item">
+      <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Structural%20engineering%20services.png" alt="Roofing and Flashing assessment Services">
+      <div class="service-description">
+        <h3>Roofing and Flashing assessment Services</h3>
+        <p>Roof conditions are evaluated and repair recommendations are provided to ensure protection from weather.</p>
+      </div>
+    </div>
+
+    <!-- Building Envelope Design Detailing (unchanged) -->
+    <div class="service-item">
+      <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/MEP.png" alt="Building Envelope Design Detailing">
+      <div class="service-description">
+        <h3>Building Envelope Design Detailing</h3>
+        <p>Highly detailed CAD drawings illustrate key components of the exterior envelope for accurate repair or new construction.</p>
+      </div>
+    </div>
+
+    <!-- Envelope Construction Administration (unchanged) -->
+    <div class="service-item">
+      <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Civil%20engineering.png" alt="Envelope Construction Administration">
+      <div class="service-description">
+        <h3>Envelope Construction Administration</h3>
+        <p>Façade and roof repair projects are overseen to maintain quality, schedule, and material compliance.</p>
+      </div>
+    </div>
+
+    <!-- Discipline Specific CAD Support -->
+    <div class="service-item">
+      <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/CADD%20services.png" alt="Discipline Specific CAD Support">
+      <div class="service-description">
+        <h3>Discipline Specific CAD Support</h3>
+        <p>Professionally drafted technical drawings support all trades—structure, architecture, MEP, electrical, plumbing, and Structural.</p>
+      </div>
+    </div>
+
+    <!-- Subscription Based Structural Support (unchanged) -->
+    <div class="service-item">
+      <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Special%20inspections.png" alt="Subscription Based Structural Support">
+      <div class="service-description">
+        <h3>Subscription Based Structural Support</h3>
+        <p>Ongoing structural consultation and document support provided through an affordable, monthly plan.</p>
+      </div>
+    </div>
+
+    <!-- Additional Services (unchanged) -->
+    <div class="service-item">
+      <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Building%20envelope.png" alt="Additional Services">
+      <div class="service-description">
+        <h3>Additional Services</h3>
+        <p>Covers a wide range of construction-related support beyond the listed categories—tailored solutions for unique project needs.</p>
+      </div>
+    </div>
+  </div>
+</section>
 
 <!-- NEW: About Us (text left, video right) -->
 <section class="about-section" id="about">
