--- a/index.html
+++ b/index.html
@@ -608,7 +608,10 @@
 <section class="about-section" id="about">
   <div class="about-text">
     <h2>About Us</h2>
-    <p>Resolution Tech Constructions blends structural engineering expertise with practical AI to deliver faster, safer, and more reliable outcomes. Our strategy is simple: automate what machines do best, so our engineers can focus on judgment, quality, and risk. We standardize workflows, use data to anticipate issues before they surface, and design resilient solutions that stand up to real-world constraints. From façade rehabilitation to forensic analysis and construction administration, our goal is consistent performance—clear communication, disciplined execution, and measurable value on every project.</p>
+    <p>At Resolution Tech Constructions, we employ innovative and highly efficient calculation methodologies to deliver accurate and reliable results. Through the successful automation of non-engineering project costs, we enable greater focus on human-centered engineering innovation.
+With a diverse range of expertise on board, Resolution Tech has the capacity to anticipate and address challenges both prior to and during project execution. By leveraging advanced technology and data-driven models to foresee potential failures, we help reduce future project costs significantly.
+Utilizing AI-driven models, we provide clients with precise, cost-effective solutions while ensuring higher quality and performance across all deliverables.
+</p>
   </div>
   <div class="about-media">
   <video autoplay muted loop playsinline preload="metadata">
