--- a/index.html
+++ b/index.html
@@ -682,59 +682,72 @@ Utilizing AI-driven models, we provide clients with precise, cost-effective solu
 document.addEventListener('DOMContentLoaded', () => {
   const map = new Map([
     ["Structural Analysis and Design", [
-      "Steel & Concrete Design","Load Ratings","Seismic Checks","Value Engineering",
-      "Strengthening Schemes","Shop Drawing Review"
-    ]],
-    ["Restoration and Rehabilitation Services", [
-      "Façade Repairs","Crack Injection","Masonry Stitching","Corrosion Mitigation",
-      "Carbon FRP Wraps","Protective Coatings"
+      "Structural analysis of existing structures",
+      "Seismic analysis",
+      "Pile repairs",
+      "Structural retrofit of existing structures",
+      "Retaining wall analysis, design and retrofit",
+      "Wind analysis",
+      "Temporary shoring design",
+      "Historic structure analysis and design",
+      "More services …"
     ]],
     ["Forensic Engineering and Expert Reports", [
-      "Failure Causation","Water Intrusion Source","Roof Damage Assessments",
-      "Expert Witness Reports","Insurance Support","Code Compliance Opinions"
+      "Structural framing failure investigations",
+      "Building envelope failure investigations",
+      "Foundation wall failure investigations",
+      "Retaining wall failure investigations",
+      "Roof failure investigations",
+      "Retrofit failure investigations",
+      "More services …"
     ]],
     ["Inspection and Compliance Services", [
-      "Special Inspections","Condition Assessments","Punch Lists",
-      "Envelope Testing (ASTM)","Post-Repair Verification","Permit Closeout"
+      "Emergency condition assessments",
+      "Unsafe structure stabilization repair design",
+      "Unsafe structure repair administration",
+      "Historic structure emergency repair design",
+      "Emergency shoring design",
+      "More services …"
     ]],
     ["Structural Construction Administration", [
-      "Submittal Reviews","RFI Responses","Site Observations",
-      "Change Order Support","As-Built Review","Contractor Coordination"
+      "Review structural shop drawings and submittals",
+      "On-site observation of structural members installation",
+      "Oversight of field testing and special inspections for concrete, steel, masonry, and wood assemblies",
+      "Monitoring of structural modifications to original work",
+      "Documentation and resolution of non-conforming work related to structure",
+      "Preparation of punch lists for structural items at substantial completion",
+      "More services …"
     ]],
     ["Building Facade Assessment and Repair Services", [
-      "Ornamental Stone Rehab","Shelf Angle Repairs","Sealant Replacement",
-      "Parapet Rebuilds","Lintel Replacement","Repointing"
+      "Masonry restoration",
+      "Stucco repairs",
+      "Siding repairs",
+      "Other façade material repairs",
+      "Cladding repairs",
+      "Curtain wall design",
+      "Moisture intrusion investigations",
+      "More services …"
     ]],
-    ["Moisture Intrusion and Envelope Diagnostics", [
-      "Leak Mapping","Infrared Scans","Probe Openings",
-      "Window/Wall Interface","Roof/Wall Transitions","Vapor/Drainage Paths"
-    ]],
-    ["Roofing and Flashing assessment Services", [
-      "EPDM/TPO Review","Coping & Counterflashing","Penetration Detailing",
-      "Drainage & Ponding","Warranty Coordination","Repair Scopes"
-    ]],
-    ["Building Envelope Design Detailing", [
-      "Transitions & Terminations","Air/Water Barriers","Facade Anchoring",
-      "Thermal Breaks","Expansion Joints","Shop Drawing Detailing"
-    ]],
-    ["Envelope Construction Administration", [
-      "Substrate Prep Review","Mockups & Testing","Material Conformance",
-      "Scheduling & Sequencing","RFIs/Submittals","Daily Logs"
+    ["Roofing and Flashing Assessment Services", [
+      "Roof condition assessment",
+      "Moisture intrusion investigations",
+      "Roof repair design",
+      "Roof repair construction administration",
+      "Coping and flashing repair design",
+      "More services …"
     ]],
     ["Discipline Specific CAD Support", [
-      "Structural Sheets","Envelope Details","MEP Coordination",
-      "As-Builts","Permit Sets","Shop Drawings"
-    ]],
-    ["Subscription Based Structural Support", [
-      "On-Call Reviews","Rapid RFIs","Small Calcs",
-      "Detail Markups","Scope Clarifications","Monthly Reporting"
-    ]],
-    ["Additional Services", [
-      "Peer Review","Third-Party QC","Owner’s Rep",
-      "BIM Coordination","Spec Writing","Training/Workshops"
+      "2D and 3D CAD drawings",
+      "Revit, SketchUp and other 3D modeling services",
+      "BIM modeling",
+      "Shop drawing detailing",
+      "Architectural rendering",
+      "More services …"
     ]]
   ]);
 
+  // ...rest of your code that uses `map`
+});
   const cards = document.querySelectorAll('.service-item');
   const overlay = document.getElementById('blur-overlay');
 
