--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
       </div>
     </div>
 
-    <!-- Roofing and Flashing assessment Services (unchanged) -->
+    <!-- Roofing and Flashing Assessment Services (unchanged) -->
     <div class="service-item">
       <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Structural%20engineering%20services.png" alt="Roofing and Flashing assessment Services">
       <div class="service-description">
