--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
     <div class="service-item">
       <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Structural%20engineering%20services.png" alt="Roofing and Flashing assessment Services">
       <div class="service-description">
-        <h3>Roofing and Flashing assessment Services</h3>
+        <h3>Roofing and Flashing Assessment Services</h3>
         <p>Roof conditions are evaluated and repair recommendations are provided to ensure protection from weather.</p>
       </div>
     </div>
