--- a/index.html
+++ b/index.html
@@ -348,6 +348,24 @@
       font-size: 0.9rem;
       color: #555;
     }
+  
+  /* Center the final single card under a 4×2 grid */
+  .services-grid .last-center {
+    grid-column: 2 / span 2;     /* spans columns 2–3 on a 4-col grid */
+    justify-self: center;
+  }
+
+  /* Responsive centering for smaller screens */
+  @media (max-width: 900px) {
+    .services-grid .last-center {
+      grid-column: 1 / -1;       /* full width on 2-col layout */
+    }
+  }
+  @media (max-width: 560px) {
+    .services-grid .last-center {
+      grid-column: 1 / -1;       /* full width on 1-col layout */
+    }
+  }
 
     .search-icon {
       background: none;
@@ -494,25 +512,16 @@
       </div>
     </div>
 
-    <!-- Restoration and Rehabilitation Services -->
-    <div class="service-item">
-      <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Historic%20structure.png" alt="Restoration and Rehabilitation Services">
-      <div class="service-description">
-        <h3>Restoration and Rehabilitation Services</h3>
-        <p>Aged, damaged, or deteriorated buildings are evaluated and restored to ensure long-term safety and performance.</p>
-      </div>
-    </div>
-
     <!-- Forensic Engineering and Expert Reports -->
     <div class="service-item">
       <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Forensic%20analysis.png" alt="Forensic Engineering and Expert Reports">
       <div class="service-description">
         <h3>Forensic Engineering and Expert Reports</h3>
-        <p>Root causes of structurak failures are uncovered and documented for insurance, legal, and technical purposes.</p>
+        <p>Root causes of structural failures are uncovered and documented for insurance, legal, and technical purposes.</p>
       </div>
     </div>
 
-    <!-- Inspection and Compliance Services (unchanged) -->
+    <!-- Inspection and Compliance Services -->
     <div class="service-item">
       <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/MEP.png" alt="Inspection and Compliance Services">
       <div class="service-description">
@@ -521,7 +530,7 @@
       </div>
     </div>
 
-    <!-- Structural Construction Administration (unchanged) -->
+    <!-- Structural Construction Administration -->
     <div class="service-item">
       <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Civil%20engineering.png" alt="Structural Construction Administration">
       <div class="service-description">
@@ -530,7 +539,7 @@
       </div>
     </div>
 
-    <!-- Building Facade Assessment and Repair Services (unchanged) -->
+    <!-- Building Facade Assessment and Repair Services -->
     <div class="service-item">
       <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Building%20envelope.png" alt="Building Facade Assessment and Repair Services">
       <div class="service-description">
@@ -548,30 +557,12 @@
       </div>
     </div>
 
-    <!-- Roofing and Flashing Assessment Services (unchanged) -->
+    <!-- Roofing and Flashing Assessment Services -->
     <div class="service-item">
-      <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Structural%20engineering%20services.png" alt="Roofing and Flashing assessment Services">
+      <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Structural%20engineering%20services.png" alt="Roofing and Flashing Assessment Services">
       <div class="service-description">
         <h3>Roofing and Flashing Assessment Services</h3>
         <p>Roof conditions are evaluated and repair recommendations are provided to ensure protection from weather.</p>
-      </div>
-    </div>
-
-    <!-- Building Envelope Design Detailing (unchanged) -->
-    <div class="service-item">
-      <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/MEP.png" alt="Building Envelope Design Detailing">
-      <div class="service-description">
-        <h3>Building Envelope Design Detailing</h3>
-        <p>Highly detailed CAD drawings illustrate key components of the exterior envelope for accurate repair or new construction.</p>
-      </div>
-    </div>
-
-    <!-- Envelope Construction Administration (unchanged) -->
-    <div class="service-item">
-      <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Civil%20engineering.png" alt="Envelope Construction Administration">
-      <div class="service-description">
-        <h3>Envelope Construction Administration</h3>
-        <p>Façade and roof repair projects are overseen to maintain quality, schedule, and material compliance.</p>
       </div>
     </div>
 
@@ -580,21 +571,12 @@
       <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/CADD%20services.png" alt="Discipline Specific CAD Support">
       <div class="service-description">
         <h3>Discipline Specific CAD Support</h3>
-        <p>Professionally drafted technical drawings support all trades—structure, architecture, MEP, electrical, plumbing, and Structural.</p>
+        <p>Professionally drafted technical drawings support all trades—structure, architecture, MEP, electrical, plumbing, and structural.</p>
       </div>
     </div>
 
-    <!-- Subscription Based Structural Support (unchanged) -->
-    <div class="service-item">
-      <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Special%20inspections.png" alt="Subscription Based Structural Support">
-      <div class="service-description">
-        <h3>Subscription Based Structural Support</h3>
-        <p>Ongoing structural consultation and document support provided through an affordable, monthly plan.</p>
-      </div>
-    </div>
-
-    <!-- Additional Services (unchanged) -->
-    <div class="service-item">
+    <!-- Additional Services (centered bottom) -->
+    <div class="service-item last-center">
       <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Building%20envelope.png" alt="Additional Services">
       <div class="service-description">
         <h3>Additional Services</h3>
@@ -644,22 +626,18 @@ Utilizing AI-driven models, we provide clients with precise, cost-effective solu
 
     <div>
       <label for="service">Service Needed</label>
-      <select id="service" name="service" required>
-        <option value="" disabled selected>Select a service</option>
-        <option>Structural Analysis and Design</option>
-        <option>Restoration and Rehabilitation</option>
-        <option>Forensic Engineering / Expert Reports</option>
-        <option>Inspection and Compliance</option>
-        <option>Structural Construction Administration</option>
-        <option>Facade Assessment & Repair</option>
-        <option>Moisture Intrusion / Envelope Diagnostics</option>
-        <option>Roofing & Flashing Assessment</option>
-        <option>Building Envelope Design Detailing</option>
-        <option>Envelope Construction Administration</option>
-        <option>Discipline Specific CAD Support</option>
-        <option>Subscription Based Structural Support</option>
-        <option>Other / Additional Services</option>
-      </select>
+<select id="service" name="service" required>
+  <option value="" disabled selected>Select a service</option>
+  <option>Structural Analysis and Design</option>
+  <option>Forensic Engineering / Expert Reports</option>
+  <option>Inspection and Compliance</option>
+  <option>Structural Construction Administration</option>
+  <option>Facade Assessment & Repair</option>
+  <option>Moisture Intrusion / Envelope Diagnostics</option>
+  <option>Roofing & Flashing Assessment</option>
+  <option>Discipline Specific CAD Support</option>
+  <option>Other / Additional Services</option>
+</select>
     </div>
 
     <div class="full">
@@ -751,6 +729,14 @@ document.addEventListener('DOMContentLoaded', () => {
       "Shop drawing detailing",
       "Architectural rendering",
       "More services …"
+    ]],
+    ["Additional Services", [
+      "Peer Review",
+      "Third-Party QC",
+      "Owner’s Rep",
+      "BIM Coordination",
+      "Spec Writing",
+      "Training/Workshops"
     ]]
   ]);
 
@@ -761,12 +747,13 @@ document.addEventListener('DOMContentLoaded', () => {
     const titleEl = card.querySelector('.service-description h3');
     const title = titleEl ? titleEl.textContent.trim() : "Services";
     const items = map.get(title) || [];
-
     if (!items.length) return; // skip if not in map
 
+    // Remove any old dropdown (hot reload safety)
     const existing = card.querySelector('.service-drop');
     if (existing) existing.remove();
 
+    // Build dropdown
     const drop = document.createElement('div');
     drop.className = 'service-drop';
     drop.innerHTML = `
@@ -775,6 +762,7 @@ document.addEventListener('DOMContentLoaded', () => {
     `;
     card.appendChild(drop);
 
+    // Blur overlay toggle on hover/focus
     const activate = () => { overlay.classList.add('active'); card.classList.add('hover-focus'); };
     const deactivate = () => { overlay.classList.remove('active'); card.classList.remove('hover-focus'); };
 
@@ -785,5 +773,6 @@ document.addEventListener('DOMContentLoaded', () => {
   });
 });
 </script>
+
 </body>
 </html>
