--- a/index.html
+++ b/index.html
@@ -547,12 +547,11 @@
       </div>
     </div>
 
-    <!-- Moisture Intrusion and Envelope Diagnostics -->
     <div class="service-item">
       <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Moisture%20intrusion.png" alt="Moisture Intrusion and Envelope Diagnostics">
       <div class="service-description">
-        <h3>Moisture Intrusion and Envelope Diagnostics</h3>
-        <p>Moisture intrusion path is detected using testing methods.</p>
+        <h3>Solar Panel Installation Services</h3>
+        <p>New solar panel installation at roof, facade, and open ground.</p>
       </div>
     </div>
 
@@ -705,13 +704,14 @@ document.addEventListener('DOMContentLoaded', () => {
       "Moisture intrusion investigations",
       "More services …"
     ]],
-    ["Moisture Intrusion and Envelope Diagnostics", [
-      "Leak Mapping",
-      "Infrared Scans",
-      "Probe Openings",
-      "Window/Wall Interface",
-      "Roof/Wall Transitions",
-      "Vapor/Drainage Paths"
+    ["Solar Panel Installation Services", [
+      "Solar Structural Design Services",
+      "Rooftop Solar Engineering Services",
+      "Solar Canopy & Carport Engineering",
+      "Ground-Mounted Solar Farm Engineering",
+      "Specialty Solar Systems",
+      "Construction & Logistics Support",
+      "More services …"
     ]],
     ["Roofing and Flashing Assessment Services", [
       "Roof condition assessment",
