--- a/index.html
+++ b/index.html
@@ -687,11 +687,9 @@ document.addEventListener('DOMContentLoaded', () => {
     ]],
     ["Structural Construction Administration", [
       "Review structural shop drawings and submittals",
-      "On-site observation of structural members installation",
-      "Oversight of field testing and special inspections for concrete, steel, masonry, and wood assemblies",
-      "Monitoring of structural modifications to original work",
-      "Documentation and resolution of non-conforming work related to structure",
-      "Preparation of punch lists for structural items at substantial completion",
+      "Construction Oversight",
+      "Special Inspections",
+      "Documentation of construction progress",
       "More services …"
     ]],
     ["Building Facade Assessment and Repair Services", [
