--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
     <div class="service-item">
       <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/CADD%20services.png" alt="Discipline Specific CAD Support">
       <div class="service-description">
-        <h3>Discipline Specific CAD Support</h3>
+        <h3>Smart Drafting and BIM Modeling</h3>
         <p>Professionally drafted technical drawings support all trades—structure, architecture, MEP, electrical, plumbing, and structural.</p>
       </div>
     </div>
@@ -631,9 +631,9 @@ Utilizing AI-driven models, we provide clients with precise, cost-effective solu
   <option>Inspection and Compliance</option>
   <option>Structural Construction Administration</option>
   <option>Facade Assessment & Repair</option>
-  <option>Moisture Intrusion / Envelope Diagnostics</option>
+  <option>Solar Panel Installation Services</option>
   <option>Roofing & Flashing Assessment</option>
-  <option>Discipline Specific CAD Support</option>
+  <option>Smart Drafting and BIM Modeling</option>
   <option>Other / Additional Services</option>
 </select>
     </div>
@@ -719,7 +719,7 @@ document.addEventListener('DOMContentLoaded', () => {
       "Coping and flashing repair design",
       "More services …"
     ]],
-    ["Discipline Specific CAD Support", [
+    ["Smart Drafting and BIM Modeling", [
       "2D and 3D CAD drawings",
       "Revit, SketchUp and other 3D modeling services",
       "BIM modeling",
