--- a/index.html
+++ b/index.html
@@ -328,64 +328,76 @@
       border-radius: 10px;
       box-shadow: 0 10px 30px rgba(0,0,0,0.08);
     }
-    :root{
-  /* tweak this if you want a slightly lighter/darker match */
-  --brand-blue: #0D3B66;          /* deep blue to match your mock */
-  --brand-blue-ink: #EAF2FB;      /* readable light text */
+   :root{
+  --brand-blue: #0D3B66;
+  --brand-blue-ink: #EAF2FB;
 }
 
-/* About: layout unchanged, just ensure the columns align nicely */
+/* Make the rectangle enclose BOTH columns */
 .about-section{
-  align-items: start;             /* keeps the two columns aligned at the top */
-}
+  /* existing layout props kept */
+  padding: 2rem;                 /* inner breathing room for the box */
+  max-width: 1200px;
+  margin: 0 auto 2rem auto;
+  display: grid;
+  grid-template-columns: 1.1fr 0.9fr;
+  gap: 2rem;
 
-/* Blue filled rectangular box around the About text */
-.about-card{
+  /* the blue box */
   background: var(--brand-blue);
-  color: var(--brand-blue-ink);
-  padding: 1.5rem 1.75rem;
-  border-radius: 12px;            /* make 0 if you want perfectly square corners */
-  box-shadow: 0 10px 28px rgba(0,0,0,0.18);
   border: 1px solid rgba(255,255,255,0.08);
+  border-radius: 12px;
+  box-shadow: 0 10px 28px rgba(0,0,0,0.18);
+  color: var(--brand-blue-ink);
+  align-items: center;           /* keep text & video nicely aligned */
 }
 
-.about-card h2{
-  color: #FFFFFF;
+/* Since the whole section is now blue, make the inner “card” transparent */
+.about-card{
+  background: transparent;
+  color: inherit;
+  padding: 0;                    /* remove inner padding so spacing comes from .about-section */
+  border: none;
+  box-shadow: none;
+}
+
+/* Typography colors inside the blue box */
+.about-text h2{
+  color: #fff;
   margin-bottom: .6rem;
 }
-
-.about-card p{
+.about-text p{
   color: var(--brand-blue-ink);
 }
 
-/* Framed video that matches the photo’s border treatment */
+/* Video styling: keep the nice frame but avoid competing shadows */
+.about-media{ width: 100%; }
+.about-media video{ box-shadow: none; }  /* turn off the old shadow */
+
+/* Keep the clean framed look that matches your mock */
 .framed-video{
   width: 100%;
   height: auto;
   display: block;
   border-radius: 14px;
-  border: 3px solid var(--brand-blue);         /* outer stroke */
+  border: 3px solid rgba(255,255,255,0.14);   /* subtle light ring on blue */
   box-shadow:
-    0 10px 30px rgba(0,0,0,0.25),              /* drop shadow */
-    inset 0 0 0 4px rgba(255,255,255,0.06);    /* subtle inner ring like the mock */
+    0 10px 24px rgba(0,0,0,0.20),
+    inset 0 0 0 4px rgba(255,255,255,0.06);
 }
 
-/* Ensure the blue box doesn’t look oversized on small screens */
+/* Responsive: stack while keeping the single rectangle */
 @media (max-width: 900px){
-  .about-card{ border-radius: 10px; }
+  .about-section{
+    grid-template-columns: 1fr;
+    padding: 1.5rem;
+  }
+  .framed-video{ border-radius: 10px; }
+}
+@media (max-width: 560px){
+  .about-section{ padding: 1.25rem; }
 }
 
-
-    /* Responsive: stack on small screens */
-    @media (max-width: 900px) {
-      .services-grid { grid-template-columns: repeat(2, 1fr); }
-      .about-section { grid-template-columns: 1fr; }
-      .about-media { order: 2; }
-      .about-text { order: 1; }
-    }
-    @media (max-width: 560px) {
-      .services-grid { grid-template-columns: 1fr; }
-    }
 
     footer {
       background: #f1f1f1;
