--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
         <a href="#services">Services</a>
         <a href="#advantage">AI Advantage</a>
         <a href="#contact">Contact</a>
-        <a href="#firm">Our Firm</a>
+       <a href="#about">About us</a>
         <a href="#locations">Our Locations</a>
       </nav>
     </div>
