--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
     <div class="service-item">
       <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Moisture%20intrusion.png" alt="Moisture Intrusion and Envelope Diagnostics">
       <div class="service-description">
-        <h3>Solar Panel Installation Services</h3>
+        <h3>Solar Panel Services</h3>
         <p>New solar panel installation at roof, facade, and open ground.</p>
       </div>
     </div>
@@ -693,7 +693,7 @@
   <option>Inspection and Compliance</option>
   <option>Structural Construction Administration</option>
   <option>Facade Assessment & Repair</option>
-  <option>Solar Panel Installation Services</option>
+  <option>Solar Panel Services</option>
   <option>Roofing & Flashing Assessment</option>
   <option>Smart Drafting and BIM Modeling</option>
   <option>Other / Additional Services</option>
@@ -764,7 +764,7 @@ document.addEventListener('DOMContentLoaded', () => {
       "Moisture intrusion investigations",
       "More services …"
     ]],
-    ["Solar Panel Installation Services", [
+    ["Solar Panel Services", [
       "Solar Structural Design Services",
       "Rooftop Solar Engineering Services",
       "Solar Canopy & Carport Engineering",
