--- a/index.html
+++ b/index.html
@@ -614,11 +614,11 @@
       </div>
     </div>
 
-    <!-- Roofing and Flashing Assessment Services -->
+    <!-- Roof Replacement & Repair Design-->
     <div class="service-item">
       <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Structural%20engineering%20services.png" alt="Roofing and Flashing Assessment Services">
       <div class="service-description">
-        <h3>Roofing and Flashing Assessment Services</h3>
+        <h3>Roof Replacement & Repair Design</h3>
         <p>Roof conditions are evaluated and repair recommendations are provided to ensure protection from weather.</p>
       </div>
     </div>
@@ -694,7 +694,7 @@
   <option>Structural Construction Administration</option>
   <option>Facade Assessment & Repair</option>
   <option>Solar Panel Services</option>
-  <option>Roofing & Flashing Assessment</option>
+  <option>Roof Replacement & Repair Design</option>
   <option>Smart Drafting and BIM Modeling</option>
   <option>Other / Additional Services</option>
 </select>
@@ -773,7 +773,7 @@ document.addEventListener('DOMContentLoaded', () => {
       "Construction & Logistics Support",
       "More services …"
     ]],
-    ["Roofing and Flashing Assessment Services", [
+    ["Roof Replacement & Repair Design", [
       "Roof condition assessment",
       "Moisture intrusion investigations",
       "Roof repair design",
