--- a/index.html
+++ b/index.html
@@ -523,40 +523,6 @@
     </div>
   </header>
 
-  <section class="video-section">
-<video autoplay muted loop playsinline preload="auto" class="background-video">
-      <source src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/video/Resolutiontechmainvideop.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
-    <div class="video-overlay">
-      <div class="hero-content">
-        <h1>Resolution Tech Constructions</h1>
-        <h2>Engineering the future with artificial intelligence</h2>
-        <p>Delivering premium construction solutions across residential, commercial, and industrial sectors with unmatched precision and efficiency.</p>
-        <button class="cta-button">Explore AI Advantage</button>
-      </div>
-    </div>
-  </section>
-
-  <!-- AI Advantage Section -->
-  <section class="features" id="advantage">
-    <h2 style="text-align: center">The AI Advantage</h2>
-    <div class="features-grid">
-      <div class="card">
-        <h3>Time Optimization</h3>
-        <p>AI cuts project timelines by up to 40% by automating repetitive tasks, reducing admin work, and streamlining content creation.</p>
-      </div>
-      <div class="card">
-        <h3>Reduced Overhead</h3>
-        <p>AI reduces overhead by automating admin, management, and repetitive tasks — cutting labor hours and inefficiencies.</p>
-      </div>
-      <div class="card">
-        <h3>Error Prevention</h3>
-        <p>AI minimizes human errors by catching missed emails, calculation mistakes, and managerial oversights before they escalate.</p>
-      </div>
-    </div>
-  </section>
-
 <!-- Services Section -->
 <section class="features" id="services">
   <h2 style="text-align: center">Our Services</h2>
@@ -581,7 +547,7 @@
 
     <!-- Inspection and Compliance Services -->
     <div class="service-item">
-      <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/MEP.png" alt="Inspection and Compliance Services">
+      <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Inspection%20and%20Compliance%20Services.png" alt="Inspection and Compliance Services">
       <div class="service-description">
         <h3>Inspection and Compliance Services</h3>
         <p>Critical inspections and evaluations are conducted to confirm structural integrity and building code compliance.</p>
@@ -590,7 +556,7 @@
 
     <!-- Structural Construction Administration -->
     <div class="service-item">
-      <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Civil%20engineering.png" alt="Structural Construction Administration">
+      <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Structural%20Construction%20Administration.png" alt="Structural Construction Administration">
       <div class="service-description">
         <h3>Structural Construction Administration</h3>
         <p>Project execution is supported through submittal reviews, construction coordination, and field quality checks.</p>
@@ -599,15 +565,16 @@
 
     <!-- Building Facade Assessment and Repair Services -->
     <div class="service-item">
-      <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Building%20envelope.png" alt="Building Facade Assessment and Repair Services">
+      <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Building%20Facade%20Assessment%20and%20Repair%20Services.png" alt="Building Facade Assessment and Repair Services">
       <div class="service-description">
         <h3>Building Facade Assessment and Repair Services</h3>
         <p>Exterior walls and façade systems are assessed and repairs are recommended.</p>
       </div>
     </div>
 
+    <!-- Solar Panel Services -->
     <div class="service-item">
-      <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Moisture%20intrusion.png" alt="Moisture Intrusion and Envelope Diagnostics">
+      <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Solar%20panel%20services.png" alt="Solar Panel Services">
       <div class="service-description">
         <h3>Solar Panel Services</h3>
         <p>New solar panel installation at roof, facade, and open ground.</p>
@@ -616,7 +583,7 @@
 
     <!-- Roof Replacement & Repair Design-->
     <div class="service-item">
-      <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Structural%20engineering%20services.png" alt="Roofing and Flashing Assessment Services">
+      <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Roofing%20design%20Services.png" alt="Roofing and Flashing Assessment Services">
       <div class="service-description">
         <h3>Roof Replacement & Repair Design</h3>
         <p>Roof conditions are evaluated and repair recommendations are provided to ensure protection from weather.</p>
@@ -634,7 +601,7 @@
 
     <!-- Additional Services (centered bottom) -->
     <div class="service-item last-center">
-      <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Building%20envelope.png" alt="Additional Services">
+      <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Additional%20Services.png" alt="Additional Services">
       <div class="service-description">
         <h3>Additional Services</h3>
         <p>Covers a wide range of construction-related support beyond the listed categories—tailored solutions for unique project needs.</p>
