--- a/index.html
+++ b/index.html
@@ -522,8 +522,38 @@
       <button class="request-button">Request a Proposal</button>
     </div>
   </header>
+<section class="video-section">
+  <video autoplay muted loop playsinline preload="auto" class="background-video">
+    <source src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/video/Resolutiontechmainvideop.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+  <div class="video-overlay">
+    <div class="hero-content">
+      <h1>Resolution Tech Constructions</h1>
+      <h2>Engineering the future with artificial intelligence</h2>
+      <p>Delivering premium construction solutions across residential, commercial, and industrial sectors with unmatched precision and efficiency.</p>
+      <button class="cta-button">Explore AI Advantage</button>
+    </div>
+  </div>
+</section>
+<section class="features" id="advantage">
+  <h2 style="text-align: center">The AI Advantage</h2>
+  <div class="features-grid">
+    <div class="card">
+      <h3>Time Optimization</h3>
+      <p>AI cuts project timelines by up to 40% by automating repetitive tasks, reducing admin work, and streamlining content creation.</p>
+    </div>
+    <div class="card">
+      <h3>Reduced Overhead</h3>
+      <p>AI reduces overhead by automating admin, management, and repetitive tasks — cutting labor hours and inefficiencies.</p>
+    </div>
+    <div class="card">
+      <h3>Error Prevention</h3>
+      <p>AI minimizes human errors by catching missed emails, calculation mistakes, and managerial oversights before they escalate.</p>
+    </div>
+  </div>
+</section>
 
-<!-- Services Section -->
 <section class="features" id="services">
   <h2 style="text-align: center">Our Services</h2>
   <div class="services-grid">
